# tair

./: Makefile.am  configure.ac
rpm/: kvstore-tair-build.sh  kvstore-tair.spec  scm.xml  tair-ldb.spec
scripts/: Makefile.am  do_dump.sh  run_rsync_config_server.sh  server.js.bk  tair.sh
share/: Makefile.am  dataserver.conf.default  lens.conf.default  proxyserver.conf.default  stat_collector.conf.default  tair_administrator.conf.default
src/: Makefile.am
src/adminserver/: Makefile.am  administrator_client.cpp  administrator_client.h  administrator_handler.cpp  administrator_handler.h  administrator_initializer.cpp  administrator_initializer.h  flowcontrol.conf  grab_group_command.cpp  grab_group_command.h  http_check_config.cpp  http_check_config.h  http_check_task.cpp  http_check_task.h  http_cluster_manager.cpp  http_cluster_manager.h  http_config_helper.cpp  http_config_helper.h  http_del_config.cpp  http_del_config.h  http_get_config.cpp  http_get_config.h  http_gettair_config.cpp  http_gettair_config.h  http_set_config.cpp  http_set_config.h  main.cpp  murmurhash2.cpp  murmurhash2.h  namespace.conf  notify_configuration_command.cpp  notify_configuration_command.h  push_config_tool.cpp  server_list_manager.cpp  server_list_manager.hpp  sql  status.h  sync_worker.cpp  sync_worker.h  tair_manager.cpp  (+6 more)
src/client/: Makefile.am  capi_define.hpp  clean_worker.hpp  cluster_controller.cpp  cluster_controller.hpp  cluster_handler_manager.cpp  cluster_handler_manager.hpp  cluster_info_updater.cpp  data_entry_local_cache.cpp  data_entry_local_cache.h  diamond_manager.cpp  diamond_manager.hpp  flow_admin.cpp  flow_admin.h  i_tair_client_impl.cpp  i_tair_client_impl.hpp  local_cache.h  local_cache.hpp  manipulate_ds_to_cs.cpp  tair_client.cpp  tair_client.hpp  tair_client_api.cpp  tair_client_api.hpp  tair_client_api_impl.cpp  tair_client_api_impl.hpp  tair_client_capi.cpp  tair_client_capi.hpp  tair_mc_client_api.cpp  tair_mc_client_api.hpp  tair_mc_client_capi.cpp  tair_mc_client_capi.hpp  tair_multi_cluster_client_impl.cpp  tair_multi_cluster_client_impl.hpp  tair_statistics.cpp  tair_statistics.h
src/common/: BlockQueueEx.hpp  Makefile.am  async_callback_def.hpp  bucket_queue.cpp  bucket_queue.hpp  compressor.hpp  counter_wrapper.hpp  data_entry.cpp  data_entry.hpp  databuffer.hpp  define.hpp  easy_helper.cpp  easy_helper.hpp  file_list_factory.hpp  file_op.hpp  httpclient.cpp  httpclient.hpp  inval_stat.hpp  item_data_info.cpp  item_data_info.hpp  key_value_pack.hpp  log_reader.hpp  mixin_test_helper.cpp  mixin_test_helper.hpp  record.cpp  record.hpp  record_logger.cpp  record_logger.hpp  record_logger_util.cpp  result.hpp  rwlock.hpp  seqlock.hpp  stat_define.cpp  stat_define.hpp  stat_helper.cpp  stat_helper.hpp  stat_info.hpp  syncproc.hpp  tair_atomic.hpp  tair_stat.cpp  (+7 more)
src/configserver/: Makefile.am  conf_server_table_manager.cpp  conf_server_table_manager.hpp  group_info.cpp  group_info.hpp  migrate_emulator.cpp  server_conf_thread.cpp  server_conf_thread.hpp  server_info.hpp  server_info_allocator.cpp  server_info_allocator.hpp  stat_info.cpp  stat_info.hpp  table_builder.cpp  table_builder.hpp  table_builder2.cpp  table_builder2.hpp  tair_cfg_svr.cpp  tair_cfg_svr.hpp
src/dataserver/: Makefile.am  cluster_handler.cpp  cluster_handler.hpp  configuration_flowcontrol.hpp  configuration_manager.cpp  configuration_manager.h  configuration_namespace.hpp  dup_depot.cpp  dup_depot.hpp  dup_sync_manager.cpp  dup_sync_manager.hpp  duplicate_base.hpp  duplicate_manager.cpp  duplicate_manager.hpp  heartbeat_thread.cpp  heartbeat_thread.hpp  i_remote_sync_manager.hpp  migrate_manager.cpp  migrate_manager.hpp  new_remote_sync_manager.cpp  new_remote_sync_manager.hpp  recovery_manager.cpp  recovery_manager.hpp  remote_sync_manager.cpp  remote_sync_manager.hpp  repair_rsync.cpp  request_processor.cpp  request_processor.hpp  stat_processor.cpp  table_manager.cpp  table_manager.hpp  tair_manager.cpp  tair_manager.hpp  tair_server.cpp  tair_server.hpp  update_log.cpp  update_log.hpp
src/dataserver/modules/: hotkey.cpp  hotkey.hpp  op_killer.hpp  rt_collector.cpp  rt_collector.hpp  rt_object.cpp  rt_object.hpp
src/invalserver/: Makefile.am  inval_server.cpp
src/packets/: Makefile.am  admin_config_packet.hpp  base_packet.hpp  conf_heartbeat_packet.hpp  data_server_ctrl_packet.hpp  dump_bucket_packet.hpp  dump_packet.hpp  duplicate_packet.hpp  expire_packet.hpp  feedback_packet.hpp  flow_control_packet.hpp  flow_view.hpp  get_group_non_down_dataserver_packet.hpp  get_group_packet.hpp  get_hidden_packet.hpp  get_migrate_machine.hpp  get_packet.hpp  get_range_packet.hpp  get_server_table_packet.hpp  group_names_packet.hpp  heartbeat_packet.hpp  hide_by_proxy_packet.hpp  hide_packet.hpp  inc_dec_bounded_packet.hpp  inc_dec_packet.hpp  packet.hpp  (+36 more)
src/rpc/: Makefile.am  echo_command.hpp  echo_message.proto  http_demo_command.h  mongoose.c  mongoose.h  reference_count.cpp  reference_count.h  rpc_client_context.cpp  rpc_client_context.h  rpc_command.hpp  rpc_command_factory.cpp  rpc_command_factory.h  rpc_context.cpp  rpc_context.h  rpc_dispatcher.cpp  rpc_dispatcher.h  rpc_dispatcher_eio.cpp  rpc_dispatcher_eio.h  rpc_future.cpp  rpc_future.h  rpc_http_console.cpp  rpc_http_console.h  rpc_packet.cpp  rpc_packet.h  rpc_server_context.cpp  rpc_server_context.h  rpc_session.h  rpc_thread.hpp  server_demo.cpp  tair_message.h  tair_rpc.h  unordered_map.h
src/storage/mdb/: Makefile.am  cache_hashmap.cpp  cache_hashmap.hpp  com_taobao_tair_jmdb_JMdbNative.cpp  com_taobao_tair_jmdb_JMdbNative.h  format.txt  libmdb_c.cpp  libmdb_c.hpp  libmdb_test_c.cpp  lock_guard.hpp  mdb_area_test.cpp  mdb_define.cpp  mdb_define.hpp  mdb_factory.cpp  mdb_instance.cpp  mdb_instance.hpp  mdb_manager.cpp  mdb_manager.hpp  mdb_reader.cpp  mdb_slab_test.cpp  mdb_stat.hpp  mdb_stat_manager.cpp  mdb_stat_manager.hpp  mdb_test.cpp  mem_cache.cpp  mem_cache.hpp  mem_pool.cpp  mem_pool.hpp
src/storage/mdb/jni/: JMdbNative.java
src/tools/: Makefile.am  dump_transfer.cpp  lens.cpp  mtair.cpp  parse_admin_conf.cpp
(+65 files in other folders)
